// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertBanner component renders correctly 1`] = `
<div>
  <div
    class="AlertBanner-root-1 AlertBanner-success-3 ColorPair-root-8 ColorPair-white-9"
  >
    <div
      class="AlertBanner-actions-5"
    />
    <div
      class="Container-root-34"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root AlertBanner-title-6 Typography-root-36 MuiTypography-h5"
          data-testid="typography"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root AlertBanner-icon-7"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-2z"
            />
          </svg>
          Success
        </h5>
        This is a success alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with a sticky position 1`] = `
<div>
  <div
    class="AlertBanner-root-130 AlertBanner-sticky-131 ColorPair-root-137 ColorPair-alert-145"
    style="top: 100px;"
  >
    <div
      class="AlertBanner-actions-134"
    />
    <div
      class="Container-root-163"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root AlertBanner-title-135 Typography-root-165 MuiTypography-h5"
          data-testid="typography"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root AlertBanner-icon-136"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with a warning severity 1`] = `
<div>
  <div
    class="AlertBanner-root-44 ColorPair-root-51 ColorPair-alert-59"
  >
    <div
      class="AlertBanner-actions-48"
    />
    <div
      class="Container-root-77"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root AlertBanner-title-49 Typography-root-79 MuiTypography-h5"
          data-testid="typography"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root AlertBanner-icon-50"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;

exports[`AlertBanner component renders correctly with an action 1`] = `
<div>
  <div
    class="AlertBanner-root-87 ColorPair-root-94 ColorPair-alert-102"
  >
    <div
      class="AlertBanner-actions-91"
    >
      <span>
        Some action here
      </span>
    </div>
    <div
      class="Container-root-120"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h5
          class="MuiTypography-root AlertBanner-title-92 Typography-root-122 MuiTypography-h5"
          data-testid="typography"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root AlertBanner-icon-93"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Warning
        </h5>
        This is a warning alert banner
      </div>
    </div>
  </div>
</div>
`;
